--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,9 @@
-<div>
 
+    <div>
+        
+    <img src="/images/beer.png" alt="picture of a beer">
+    <div>
+        <button><a href="/beers">Check the beers!</a></button>
+        <button><a href="/random-beer">Check a random beer!</a></button>
+    </div>
 </div>
